--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,8 @@
         android:layout_alignParentStart="true"
         android:hint="@string/username_hint"/>
 
+        <requestFocus />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
