--- a/app/src/main/res/menu/menu_edit_friends.xml
+++ b/app/src/main/res/menu/menu_edit_friends.xml
@@ -1,13 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
-    <item android:id="@+id/action_logout"
-          android:title="@string/action_logout"
+      tools:context="com.wesleyseago.android.ribbit.EditFriendsActivity">
+    <item android:id="@+id/action_settings"
+          android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
-
-    <item android:id="@+id/action_edit_friends"
-            android:title="@string/menu_edit_friends_label"/>
-
 </menu>
