--- a/app/src/main/res/menu/menu_recipients.xml
+++ b/app/src/main/res/menu/menu_recipients.xml
@@ -2,8 +2,14 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.wesleyseago.android.ribbit.RecipientsActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+
+
+    <item
+          android:id="@+id/action_send"
+          android:title="@string/menu_send_label"
+          android:orderInCategory="300"
+          app:showAsAction="always"
+          android:visible="true"
+          android:icon="@drawable/ic_action_send_now" />
+
 </menu>
